[gd_scene load_steps=33 format=3 uid="uid://cw7kyly4dsfm4"]

[ext_resource type="AudioStream" uid="uid://c8kudnv42ynk5" path="res://sounds/ドタバタ劇場.mp3" id="1_j7x83"]
[ext_resource type="Script" path="res://scripts/game.gd" id="2_jhuyf"]
[ext_resource type="Texture2D" uid="uid://dbbaqhksjvd8k" path="res://images/background-kokkaigijidou-s.png" id="2_xspyh"]
[ext_resource type="AudioStream" uid="uid://ce1363tx51aqf" path="res://sounds/決定ボタンを押す2.mp3" id="3_as7pr"]
[ext_resource type="AudioStream" uid="uid://cxjgdlntlsws" path="res://sounds/小キック.mp3" id="5_f8mp8"]
[ext_resource type="Texture2D" uid="uid://dkk1u2kdkj8yv" path="res://images/kon-punch.png" id="5_ydh20"]
[ext_resource type="AudioStream" uid="uid://41y1aniw82h6" path="res://sounds/小パンチ.mp3" id="6_g3dqy"]
[ext_resource type="Script" path="res://scripts/wall.gd" id="8_gsmq8"]
[ext_resource type="Texture2D" uid="uid://uwh5yhnqwg6h" path="res://images/block.png" id="8_vponx"]
[ext_resource type="FontFile" uid="uid://dm5chb6thc8xh" path="res://fonts/x12y16pxMaruMonica.ttf" id="10_hysjp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bw24v"]
atlas = ExtResource("5_ydh20")
region = Rect2(0, 0, 36, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6eoa"]
atlas = ExtResource("5_ydh20")
region = Rect2(36, 0, 36, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb05p"]
atlas = ExtResource("5_ydh20")
region = Rect2(72, 0, 36, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_16d7i"]
atlas = ExtResource("5_ydh20")
region = Rect2(108, 0, 36, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq56b"]
atlas = ExtResource("5_ydh20")
region = Rect2(144, 0, 36, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb2fe"]
atlas = ExtResource("5_ydh20")
region = Rect2(0, 0, 36, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dhw0t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw24v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6eoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb05p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16d7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq56b")
}],
"loop": false,
"name": &"attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb2fe")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="GDScript" id="GDScript_7hdn3"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l6thv"]
playback_mode = 1
random_pitch = 1.2
random_volume_offset_db = 0.5
streams_count = 2
stream_0/stream = ExtResource("5_f8mp8")
stream_0/weight = 5.0
stream_1/stream = ExtResource("6_g3dqy")

[sub_resource type="AtlasTexture" id="AtlasTexture_8mirg"]
atlas = ExtResource("8_vponx")
region = Rect2(80, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_76mrt"]
atlas = ExtResource("8_vponx")
region = Rect2(160, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_01tng"]
atlas = ExtResource("8_vponx")
region = Rect2(240, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmo3d"]
atlas = ExtResource("8_vponx")
region = Rect2(320, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_bst2e"]
atlas = ExtResource("8_vponx")
region = Rect2(400, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubydc"]
atlas = ExtResource("8_vponx")
region = Rect2(480, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_itb6c"]
atlas = ExtResource("8_vponx")
region = Rect2(560, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0wa0"]
atlas = ExtResource("8_vponx")
region = Rect2(640, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v488"]
atlas = ExtResource("8_vponx")
region = Rect2(0, 0, 80, 110)

[sub_resource type="SpriteFrames" id="SpriteFrames_k2xqm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mirg")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76mrt")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_01tng")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmo3d")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bst2e")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubydc")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_itb6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0wa0")
}],
"loop": false,
"name": &"break",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v488")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_v5npo"]
font = ExtResource("10_hysjp")
outline_size = 4
outline_color = Color(0.10748, 0.10748, 0.10748, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_draa8"]
font = ExtResource("10_hysjp")

[sub_resource type="LabelSettings" id="LabelSettings_e7ns3"]
font = ExtResource("10_hysjp")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Level" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TextureRect" type="TextureRect" parent="."]
top_level = true
offset_right = 256.0
offset_bottom = 144.0
texture = ExtResource("2_xspyh")
expand_mode = 1

[node name="Game" type="Node" parent="."]
script = ExtResource("2_jhuyf")

[node name="StartTimer" type="Timer" parent="Game"]
autostart = true

[node name="SE" type="AudioStreamPlayer2D" parent="Game/StartTimer"]
stream = ExtResource("3_as7pr")

[node name="TitleButtonTimer" type="Timer" parent="Game"]
wait_time = 4.0
one_shot = true

[node name="BGM" type="AudioStreamPlayer2D" parent="Game"]
stream = ExtResource("1_j7x83")
volume_db = -8.0

[node name="Character" type="AnimatedSprite2D" parent="Game"]
position = Vector2(48, 111)
sprite_frames = SubResource("SpriteFrames_dhw0t")
animation = &"attack"
frame = 4
frame_progress = 1.0
script = SubResource("GDScript_7hdn3")

[node name="SE" type="AudioStreamPlayer2D" parent="Game/Character"]
position = Vector2(-68.9002, -134.237)
scale = Vector2(0.296984, 0.296984)
stream = SubResource("AudioStreamRandomizer_l6thv")
volume_db = -0.5

[node name="GroupWall" type="Node2D" parent="Game"]

[node name="Wall" type="AnimatedSprite2D" parent="Game/GroupWall"]
position = Vector2(111, 89)
sprite_frames = SubResource("SpriteFrames_k2xqm")
animation = &"break"
frame = 1
frame_progress = 1.0
script = ExtResource("8_gsmq8")

[node name="SE" type="AudioStreamPlayer2D" parent="Game/GroupWall/Wall"]

[node name="UI" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 144.0

[node name="StartCountDownLabel" type="Label" parent="Game/UI"]
top_level = true
clip_children = 2
offset_right = 256.0
offset_bottom = 144.0
text = "3"
label_settings = SubResource("LabelSettings_v5npo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultsLabel" type="Label" parent="Game/UI"]
top_level = true
clip_children = 2
offset_right = 256.0
offset_bottom = 144.0
label_settings = SubResource("LabelSettings_v5npo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreTimeLabel" type="Label" parent="Game/UI"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 255.0
offset_bottom = 17.0
label_settings = SubResource("LabelSettings_draa8")
horizontal_alignment = 2

[node name="TitleGoButton" type="Label" parent="Game/UI"]
layout_mode = 0
offset_left = 185.0
offset_top = 115.0
offset_right = 251.0
offset_bottom = 139.0
text = "Titleに戻る"
label_settings = SubResource("LabelSettings_e7ns3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Game/StartTimer" to="Game" method="_on_start_timer_timeout"]
[connection signal="timeout" from="Game/TitleButtonTimer" to="Game" method="_on_title_button_timer_timeout"]
[connection signal="animation_finished" from="Game/GroupWall/Wall" to="Game/GroupWall/Wall" method="_on_animation_finished"]
